# Cervidae

./: .env  Cargo.toml  README.md  compose.yml  justfile  package.json  pnpm-lock.yaml
frontend/: app.js  index.html
frontend/cervidae/: package-lock.json  package.json  pnpm-lock.yaml
frontend/cervidae/app/: layout.tsx  page.tsx
frontend/cervidae/app/auth/: page.tsx
frontend/cervidae/app/auth/register/: page.tsx
frontend/cervidae/app/deer/[id]/: page.tsx
frontend/cervidae/app/deer/create/: page.tsx
frontend/cervidae/app/login/: page.tsx
frontend/cervidae/app/user/[id]/: layout.tsx  page.tsx
frontend/cervidae/app/user/[id]/comments/: page.tsx
frontend/cervidae/app/user/[id]/profile/: page.tsx
frontend/cervidae/app/user/[id]/reviews/: page.tsx
frontend/cervidae/lib/: action.tsx
frontend/cervidae/ui/: auth-provider.tsx  client-provider.tsx  client_provider.tsx  comment.tsx  create-deer-form.tsx  create-review.tsx  danger_rating.tsx  deer-card.tsx  generic-input.tsx  header.tsx  password-input.tsx  reset-password.tsx  review.tsx  switch.tsx  test.tsx  tiptap.tsx
migrations/: 20250214000000_init.sql
src/: graphql.rs  main.rs  models.rs  storage.rs
src/graphql/: models.rs  storage.rs  test_storage.rs
