[package]
name = "Cervidae"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "tls-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
] }
axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
http = "1.1.0"
serde = "1.0.217"
tracing = "0.1.41"
tracing-subscriber = "0.3"
dotenvy = "0.15"
uuid = { version = "1.11.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
] }
bcrypt = "0.17"
async-graphql = "7.0.15"
async-graphql-axum = "7.0.15"